--- a/config/Localization/Global/Global_SystemCurrencies_pt-br.xml
+++ b/config/Localization/Global/Global_SystemCurrencies_pt-br.xml
@@ -20,7 +20,7 @@
     </locale_entry>
     <locale_entry>
       <Name>Global/SystemCurrencies/SystemCurrencies/ALL</Name>
-      <Value>ALL</Value>
+      <Value>TODOS</Value>
     </locale_entry>
     <locale_entry>
       <Name>Global/SystemCurrencies/SystemCurrencies/AMD</Name>
