--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessageAccount_pt-BR.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessageAccount_pt-BR.xml
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-  <language_code>pt-BR</language_code>
+  <language_code>pt-br</language_code>
   <locale_space name="BusinessEntity/Core.BillMessages.BillMessageAccount">
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessageAccount/EndDate/Label</Name>
-      <Value>[pt-BR]Message End Date</Value>
+      <Value>Data de término da mensagem</Value>
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessageAccount/MessageCode/Label</Name>
-      <Value>[pt-BR]Message Code</Value>
+      <Value>Código da mensagem</Value>
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessageAccount/StartDate/Label</Name>
-      <Value>[pt-BR]Message Start Date</Value>
+      <Value>Data de início da mensagem</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
