--- a/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_pt-BR.xml
+++ b/config/Localization/BusinessEntity/BusinessEntity_Core.BillMessages.BillMessage_pt-BR.xml
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-  <language_code>pt-BR</language_code>
+  <language_code>pt-br</language_code>
   <locale_space name="BusinessEntity/Core.BillMessages.BillMessage">
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageCode/Label</Name>
-      <Value>[pt-BR]Message Code</Value>
+      <Value>Código da mensagem</Value>
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageFormat/Label</Name>
-      <Value>[pt-BR]Message Format</Value>
+      <Value>Formato da mensagem</Value>
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageText/Label</Name>
-      <Value>[pt-BR]Message Text</Value>
+      <Value>Texto da mensagem</Value>
     </locale_entry>
     <locale_entry>
       <Name>BusinessEntity/Core.BillMessages.BillMessage/MessageType/Label</Name>
-      <Value>[pt-BR]Message Type</Value>
+      <Value>Tipo da mensagem</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
