--- a/config/Localization/UI/UI_pt-br.xml
+++ b/config/Localization/UI/UI_pt-br.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
   <language_code>pt-br</language_code>
   <locale_space name="UI">
@@ -72,7 +72,7 @@
     </locale_entry>
     <locale_entry>
       <Name>UI/UICultures/Arabic</Name>
-      <Value>Árabe</Value>
+      <Value>Arabic</Value>
     </locale_entry>
     <locale_entry>
       <Name>UI/UICultures/Deutsch</Name>
