--- a/config/Localization/metratech.com/metratech.com_testservice_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_testservice_pt-br.xml
@@ -24,7 +24,7 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/testservice/optionaltime</Name>
-      <Value>[pt-BR]optionaltime</Value>
+      <Value>optionaltime</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/testservice/Time</Name>
