--- a/config/Localization/metratech.com/metratech.com_udrecurringcharge_pt-br.xml
+++ b/config/Localization/metratech.com/metratech.com_udrecurringcharge_pt-br.xml
@@ -36,19 +36,19 @@
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/udrecurringcharge/ProratedOnSubscription</Name>
-      <Value>Reteado devido à assinatura</Value>
+      <Value>Rateado devido à assinatura</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/udrecurringcharge/ProratedOnUnSubscription</Name>
-      <Value>Reteado devido ao cancelamento da assinatura</Value>
+      <Value>Rateado devido ao cancelamento da assinatura</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/udrecurringcharge/ProrateOnSubscription</Name>
-      <Value>Retear devido à assinatura</Value>
+      <Value>Ratear devido à assinatura</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/udrecurringcharge/ProrateOnUnSubscription</Name>
-      <Value>Retear devido ao cancelamento da assinatura</Value>
+      <Value>Ratear devido ao cancelamento da assinatura</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/udrecurringcharge/RCAmount</Name>
